test/classes/deitz/class/infer_nil.good
infer_nil.chpl:8: warning: object
infer_nil.chpl:9: error: unresolved call 'object.x'
infer_nil.chpl:2: note: candidates are: C.x
